--- a/home.html
+++ b/home.html
@@ -5,9 +5,8 @@
 </head>
 <body>
     <h1>Hello World</h1>
-    <h2>Hello World</h2>
-    <h3>Hello World</h3>
-    <h4>Hello World</h4>
-    <h5>Hello World</h5>
+    <h1>Hello Car</h1>
+    <h3>Hello Bike</h3>
+    <h3>Hello SunDevils</h3>
 </body>
 </html>
