--- a/home.html
+++ b/home.html
@@ -4,10 +4,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
     <h2>Hello World</h2>
-    <h3>Hello World</h3>
-    <h4>Hello World</h4>
-    <h5>Hello World</h5>
+    <h2>Hello Cycle</h2>
+    <h4>Hello Flight</h4>
+    <h4>Hello Fall</h4>
 </body>
 </html>
