--- a/home.html
+++ b/home.html
@@ -12,5 +12,11 @@
     <h1>Hello Car</h1>
     <h3>Hello Bike</h3>
     <h3>Hello SunDevils</h3>
+    <h3>Hello Bike</h3>
+    <h3>Hello SunDevils</h3>
+    <h3>Hello Bike</h3>
+    <h3>Hello SunDevils</h3>
+    <h3>Hello Bike</h3>
+    <h3>Hello SunDevils</h3>
 </body>
 </html>
