Update home again

--- a/home.html
+++ b/home.html
@@ -7,5 +7,11 @@
     <h1>Hello World</h1>
     <h2>Hello VS Code</h2>
     <h3>Hello Git</h3>
+    <h3>Hello Git</h3>
+    <h3>Hello Git</h3>
+    <h3>Hello Git</h3>
+    <h3>Hello Git</h3>
+    <h3>Hello Git</h3>
+    <h3>Hello Git</h3>
 </body>
 </html>
